feat: small things

--- a/aprendizado de máquina/housing.ipynb
+++ b/aprendizado de máquina/housing.ipynb
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1660,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
        "68627.87390018745"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
        "DecisionTreeRegressor()"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1791,7 @@
        "0.0"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,18 +1843,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [71903.69356538 70443.41506964 68586.39441621 70766.80154656\n",
-      " 68426.64511723 76640.40928574 71448.81796967 71879.51912029\n",
-      " 68363.556819   70288.54756037]\n",
-      "Mean: 70874.78004700999\n",
-      "Standard deviation: 2317.71186406012\n"
+      "Scores: [70815.64252389 70241.3140084  67164.64463599 71310.43101437\n",
+      " 69414.41606584 75906.83156068 71755.05821426 72669.92131135\n",
+      " 67234.15788567 71911.04161669]\n",
+      "Mean: 70842.34588371422\n",
+      "Standard deviation: 2452.116396494671\n"
      ]
     }
    ],
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,16 +1964,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18764.753862701986"
+       "18725.97290750326"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,18 +1984,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [51489.16411383 49086.30092688 46376.07242037 52117.17199431\n",
-      " 47309.09451598 52303.49325575 52680.9345382  49996.57672195\n",
-      " 48421.34125997 53489.59771687]\n",
-      "Mean: 50326.974746409905\n",
-      "Standard deviation: 2323.844446717756\n"
+      "Scores: [51389.96669465 49046.95965779 46826.77932837 52068.0174382\n",
+      " 47495.04501451 51806.2754453  52782.463804   49921.91917636\n",
+      " 48453.78465034 53821.55227506]\n",
+      "Mean: 50361.27634845817\n",
+      "Standard deviation: 2239.6827556560393\n"
      ]
     }
    ],
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2079,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,16 +2090,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_features': 4, 'n_estimators': 30}"
+       "{'max_features': 6, 'n_estimators': 30}"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,16 +2110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(max_features=4, n_estimators=30)"
+       "RandomForestRegressor(max_features=6, n_estimators=30)"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,31 +2139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64521.86063142233 {'max_features': 2, 'n_estimators': 3}\n",
-      "54941.59885156592 {'max_features': 2, 'n_estimators': 10}\n",
-      "52910.67186435185 {'max_features': 2, 'n_estimators': 30}\n",
-      "60576.85326331602 {'max_features': 4, 'n_estimators': 3}\n",
-      "52859.535985129325 {'max_features': 4, 'n_estimators': 10}\n",
-      "50118.222914848826 {'max_features': 4, 'n_estimators': 30}\n",
-      "59451.08152128076 {'max_features': 6, 'n_estimators': 3}\n",
-      "52017.99790398873 {'max_features': 6, 'n_estimators': 10}\n",
-      "50287.550003945384 {'max_features': 6, 'n_estimators': 30}\n",
-      "59343.78788103619 {'max_features': 8, 'n_estimators': 3}\n",
-      "51940.411328623464 {'max_features': 8, 'n_estimators': 10}\n",
-      "50217.19523023385 {'max_features': 8, 'n_estimators': 30}\n",
-      "63172.66903425651 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
-      "54147.09889100777 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
-      "60593.119541787244 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
-      "52069.52018343255 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
-      "58686.6105925455 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
-      "51899.7274686862 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+      "63516.5475534341 {'max_features': 2, 'n_estimators': 3}\n",
+      "55307.92998082598 {'max_features': 2, 'n_estimators': 10}\n",
+      "52788.40433876104 {'max_features': 2, 'n_estimators': 30}\n",
+      "60725.40943829912 {'max_features': 4, 'n_estimators': 3}\n",
+      "52716.464822171016 {'max_features': 4, 'n_estimators': 10}\n",
+      "50480.23732185744 {'max_features': 4, 'n_estimators': 30}\n",
+      "58725.53768335158 {'max_features': 6, 'n_estimators': 3}\n",
+      "52462.1250080227 {'max_features': 6, 'n_estimators': 10}\n",
+      "50021.5345452839 {'max_features': 6, 'n_estimators': 30}\n",
+      "58853.10976753522 {'max_features': 8, 'n_estimators': 3}\n",
+      "52119.19562647584 {'max_features': 8, 'n_estimators': 10}\n",
+      "50160.78341734943 {'max_features': 8, 'n_estimators': 30}\n",
+      "62815.6465900443 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "53676.08203871503 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "59959.30723898391 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52624.80796768573 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "58631.3705337882 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51627.768210755006 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
      ]
     }
    ],
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,19 +2204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([7.68475068e-02, 6.78074976e-02, 4.49245339e-02, 2.48368353e-02,\n",
-       "       2.04631121e-02, 2.42409947e-02, 2.00410318e-02, 3.12834998e-01,\n",
-       "       7.94157704e-02, 9.92131172e-02, 5.35764900e-02, 1.84918707e-02,\n",
-       "       1.46365192e-01, 5.43497431e-05, 5.17451954e-03, 5.71218012e-03])"
+       "array([8.09377866e-02, 7.09717737e-02, 4.01880512e-02, 1.94061699e-02,\n",
+       "       1.68567618e-02, 1.79825945e-02, 1.72769077e-02, 3.09269295e-01,\n",
+       "       7.45098951e-02, 1.01485840e-01, 5.82064903e-02, 1.44375068e-02,\n",
+       "       1.71242877e-01, 1.08977967e-04, 2.46949527e-03, 4.64957686e-03])"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2239,31 +2239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.3128349984453959, 'median_income'),\n",
-       " (0.1463651916391589, 'INLAND'),\n",
-       " (0.09921311722161318, 'pop_per_hhold'),\n",
-       " (0.07941577040049688, 'rooms_per_hhold'),\n",
-       " (0.07684750677357548, 'longitude'),\n",
-       " (0.06780749764697999, 'latitude'),\n",
-       " (0.05357648995364081, 'bedrooms_per_room'),\n",
-       " (0.04492453390697756, 'housing_median_age'),\n",
-       " (0.024836835258614163, 'total_rooms'),\n",
-       " (0.02424099470629632, 'population'),\n",
-       " (0.020463112140821027, 'total_bedrooms'),\n",
-       " (0.020041031770915107, 'households'),\n",
-       " (0.018491870736917073, '<1H OCEAN'),\n",
-       " (0.005712180117149941, 'NEAR OCEAN'),\n",
-       " (0.005174519538348764, 'NEAR BAY'),\n",
-       " (5.434974309895305e-05, 'ISLAND')]"
+       "[(0.30926929528889874, 'median_income'),\n",
+       " (0.1712428769125461, 'INLAND'),\n",
+       " (0.10148584007294126, 'pop_per_hhold'),\n",
+       " (0.08093778661628605, 'longitude'),\n",
+       " (0.0745098951216276, 'rooms_per_hhold'),\n",
+       " (0.07097177373452163, 'latitude'),\n",
+       " (0.058206490292049703, 'bedrooms_per_room'),\n",
+       " (0.040188051224458704, 'housing_median_age'),\n",
+       " (0.019406169878380234, 'total_rooms'),\n",
+       " (0.017982594506268622, 'population'),\n",
+       " (0.017276907650308534, 'households'),\n",
+       " (0.01685676176635769, 'total_bedrooms'),\n",
+       " (0.014437506843778246, '<1H OCEAN'),\n",
+       " (0.004649576856443458, 'NEAR OCEAN'),\n",
+       " (0.0024694952678943976, 'NEAR BAY'),\n",
+       " (0.00010897796723920188, 'ISLAND')]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,16 +2336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49031.6468904411"
+       "47701.084064096176"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
